tests/fixtures/fail/stdlib_http_invalid_status_vm.walrus
import "std/http" as http;

http.response(99, "oops");
